--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link
 			rel="icon"
 			type="image/png"
@@ -14,141 +14,63 @@
 		<title>Frontend Mentor | Coffeeroasters subscription site</title>
 	</head>
 	<body>
-		<nav class="navbar">
-			<img
-				src="./assets/shared/desktop/logo.svg"
-				alt="coffeeroasters"
-				class="navbar-logo"
-			/>
-			<ul class="navbar-links">
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About us</a></li>
-				<li><a href="./plan.html">Create your plan</a></li>
-			</ul>
-		</nav>
+		<div class="container">
+			<nav class="navbar">
+				<a href="index.html">
+					<img
+						src="assets/shared/desktop/logo.svg"
+						alt="Coffeeroasters Logo"
+						class="navbar-logo"
+					/>
+					<ul class="navbar-links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About us</a></li>
+						<li><a href="plan.html">Create your plan</a></li>
+					</ul>
+				</a>
+			</nav>
 
-		<header class="header">
-			<section class="header-content">
-				<h1>Great coffee made simple.</h1>
-				<p>
-					Start your mornings with the world's best coffees. Try our expertly
-					curated artisan coffees from our best roasters delivered directly to
-					your door, at your schedule.
-				</p>
-				<button>Create your plan</button>
+			<header class="header">
+				<div class="header-content">
+					<h1>Great coffee made simple.</h1>
+					<p>
+						Start your mornings with the world's best coffees. Try our expertly
+						curated artisan coffees from our best roasters delivered directly to
+						your door, at your schedule.
+					</p>
+					<a href="plan.html">Create your plan </a>
+				</div>
+			</header>
+
+			<section class="our-collection">
+				<div class="collection-title">
+					<div class="title-mask"></div>
+					<h1>Our collection</h1>
+				</div>
 			</section>
-		</header>
-		<section class="collection">
-			<div class="collection-heading">
-				<div class="mask"></div>
-				<h1>our collection</h1>
-			</div>
-			<div class="collection-cards">
-				<div class="card">
-					<img
-						src="./assets/home/desktop/image-gran-espresso.png"
-						alt="gran expresso"
-					/>
-					<h2>Gran Espresso</h2>
-					<p>
-						Light and flavorful blend with cocoa and black pepper for an intense
-						experience.
-					</p>
-				</div>
-				<div class="card">
-					<img src="./assets/home/desktop/image-planalto.png" alt="planalto" />
-					<h2>Planalto</h2>
-					<p>
-						Brazilian dark roast with rich and velvety body, and hints of fruits
-						and nuts.
-					</p>
-				</div>
-				<div class="card">
-					<img src="./assets/home/desktop/image-piccollo.png" alt="piccollo" />
-					<h2>Piccollo</h2>
-					<p>
-						Mild and smooth blend featuring notes of toasted almond and dried
-						cherry.
-					</p>
-				</div>
-				<div class="card">
-					<img src="./assets/home/desktop/image-danche.png" alt="danche" />
-					<h2>Danche</h2>
-					<p>
-						Ethiopian hand-harvested blend densely packed with vibrant fruit
-						notes.
-					</p>
-				</div>
-			</div>
-		</section>
-		<section class="about">
-			<div class="about-heading">
-				<div class="heading-content">
-					<h2>Why choose us?</h2>
-					<p>
-						A large part of our role is choosing which particular coffees will
-						be featured in our range. This means working closely with the best
-						coffee growers to give you a more impactful experience on every
-						level.
-					</p>
-				</div>
-			</div>
-			<div class="about-cards">
-				<div class="card">
-					<img
-						src="assets/home/desktop/icon-coffee-bean.svg"
-						alt="Coffee Bean Icon"
-					/>
-					<h3>Best quality</h3>
-					<p>
-						Discover an endless variety of the world's best artisan coffee from
-						each of our roasters.
-					</p>
-				</div>
-				<div class="card">
-					<img src="assets/home/desktop/icon-gift.svg" alt="Coffee Bean Icon" />
-					<h3>Exclusive benefits</h3>
-					<p>
-						Special offers and swag when you subscribe, including 30% off your
-						first shipment.
-					</p>
-				</div>
-				<div class="card">
-					<img
-						src="assets/home/desktop/icon-truck.svg"
-						alt="Coffee Bean Icon"
-					/>
-					<h3>Free shipping</h3>
-					<p>
-						We cover the cost and coffee is delivered fast. Peak freshness:
-						guaranteed.
-					</p>
-				</div>
-			</div>
-		</section>
-		<!--
-		How it works
-
-		01
-		Pick your coffee
-		Select from our evolving range of artisan coffees. Our beans are ethically 
-		sourced and we pay fair prices for them. There are new coffees in all profiles 
-		every month for you to try out.
-
-		02
-		Choose the frequency
-		Customize your order frequency, quantity, even your roast style and grind type. 
-		Pause, skip or cancel your subscription with no commitment through our online portal.
-
-		03
-		Receive and enjoy!
-		We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
-		world-class coffees curated to provide a distinct tasting experience.
-
-		Create your plan
-
-		Home
-		About us
-		Create your plan -->
+		</div>
 	</body>
 </html>
+<!-- 
+	      Our collection Gran Espresso Light and flavorful blend with cocoa
+	and black pepper for an intense experience Planalto Brazilian dark roast
+	with rich and velvety body, and hints of fruits and nuts Piccollo Mild and
+	smooth blend featuring notes of toasted almond and dried cherry Danche
+	Ethiopian hand-harvested blend densely packed with vibrant fruit notes Why
+	choose us? A large part of our role is choosing which particular coffees
+	will be featured in our range. This means working closely with the best
+	coffee growers to give you a more impactful experience on every level. Best
+	quality Discover an endless variety of the world's best artisan coffee from
+	each of our roasters. Exclusive benefits Special offers and swag when you
+	subscribe, including 30% off your first shipment. Free shipping We cover the
+	cost and coffee is delivered fast. Peak freshness: guaranteed. How it works
+	01 Pick your coffee Select from our evolving range of artisan coffees. Our
+	beans are ethically sourced and we pay fair prices for them. There are new
+	coffees in all profiles every month for you to try out. 02 Choose the
+	frequency Customize your order frequency, quantity, even your roast style
+	and grind type. Pause, skip or cancel your subscription with no commitment
+	through our online portal. 03 Receive and enjoy! We ship your package within
+	48 hours, freshly roasted. Sit back and enjoy award-winning world-class
+	coffees curated to provide a distinct tasting experience. Create your plan
+	Home About us Create your plan
+ -->
